Multiwindow buttons & websites

--- a/Launcher/App/src/main/res/layout/activity_browser.xml
+++ b/Launcher/App/src/main/res/layout/activity_browser.xml
@@ -150,6 +150,7 @@
                 android:layout_marginStart="-25dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:alpha="1"
                 android:background="@android:color/transparent"
                 android:src="@drawable/web_add_home"
                 android:tooltipText="@string/web_add_home"
@@ -163,7 +164,7 @@
             android:layout_width="39dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
@@ -176,7 +177,7 @@
             android:layout_width="39dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
@@ -189,7 +190,7 @@
             android:layout_width="39dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
@@ -202,7 +203,7 @@
             android:layout_width="39dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
@@ -215,7 +216,9 @@
             android:layout_width="39dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_margin="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/bkg_button_web"
             android:src="@drawable/web_close"
             android:tooltipText="@string/web_exit" />
