--- a/Launcher/App/src/main/res/drawable/web_add_home.xml
+++ b/Launcher/App/src/main/res/drawable/web_add_home.xml
@@ -1,6 +1,5 @@
-<vector android:height="20dp" android:tint="#FFFFFF"
+<vector android:height="19dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
-    android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M16.53,11.16c1.23,-0.26 2.4,-0.18 3.47,0.14V10c0,-0.63 -0.3,-1.22 -0.8,-1.6l-6,-4.5c-0.71,-0.53 -1.69,-0.53 -2.4,0l-6,4.5C4.3,8.78 4,9.37 4,10v9c0,1.1 0.9,2 2,2h5.68c-0.61,-1.28 -0.86,-2.77 -0.55,-4.35C11.65,13.93 13.82,11.74 16.53,11.16z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M18,13c-2.76,0 -5,2.24 -5,5s2.24,5 5,5s5,-2.24 5,-5S20.76,13 18,13zM21,18.5h-2.5V21h-1v-2.5H15v-1h2.5V15h1v2.5H21V18.5z"/>
+    android:width="19dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M19,3L5,3c-1.11,0 -2,0.9 -2,2v14c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM16,13h-3v3c0,0.55 -0.45,1 -1,1s-1,-0.45 -1,-1v-3L8,13c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h3L11,8c0,-0.55 0.45,-1 1,-1s1,0.45 1,1v3h3c0.55,0 1,0.45 1,1s-0.45,1 -1,1z"/>
 </vector>
