--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -92,6 +92,36 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/skippedUpdateButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/bkg_button"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <TextView
+                style="@style/SettingButtonLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="35dp"
+                android:singleLine="true"
+                android:text="@string/settings_update"
+                tools:ignore="NestedWeights,RtlSymmetry" />
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="-35dp"
+                android:layout_marginEnd="-8dp"
+                android:src="@drawable/ic_update" />
+
+        </LinearLayout>
+
         <TextView
             style="@style/SettingSubtitle"
             android:layout_width="match_parent"
