Fix lag in settings

--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -138,7 +138,7 @@
 
             <Switch
                 android:id="@+id/defaultWebSwitch"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:thumb="@drawable/switch_thumb_custom"
                 android:track="@drawable/switch_track_custom"
