--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -133,7 +133,8 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none">
+            android:scrollbars="none"
+            tools:ignore="SpeakableTextPresentCheck">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -150,7 +151,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_blue"
+                    android:src="@drawable/bg_px_blue_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -161,7 +162,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_grey"
+                    android:src="@drawable/bg_px_grey_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -172,7 +173,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_red"
+                    android:src="@drawable/bg_px_red_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -183,7 +184,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_yellow"
+                    android:src="@drawable/bg_px_yellow_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -194,7 +195,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_white"
+                    android:src="@drawable/bg_px_white_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -205,7 +206,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_orange"
+                    android:src="@drawable/bg_px_orange_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -216,7 +217,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_green"
+                    android:src="@drawable/bg_px_green_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -227,7 +228,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_px_purple"
+                    android:src="@drawable/bg_px_purple_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -238,7 +239,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_meta_dark"
+                    android:src="@drawable/bg_meta_dark_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
@@ -249,7 +250,7 @@
                     android:background="@drawable/bkg_button_wallpaper"
                     android:padding="0dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg_meta_light"
+                    android:src="@drawable/bg_meta_light_icon"
                     tools:ignore="ImageContrastCheck" />
 
                 <ImageView
