--- a/Launcher/App/src/main/res/layout/dialog_settings.xml
+++ b/Launcher/App/src/main/res/layout/dialog_settings.xml
@@ -99,6 +99,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@drawable/bkg_button"
+            android:backgroundTint="#FFFFFF"
             android:orientation="horizontal"
             android:visibility="gone"
             tools:visibility="visible">
@@ -111,6 +112,7 @@
                 android:layout_marginEnd="35dp"
                 android:singleLine="true"
                 android:text="@string/settings_update"
+                android:textColor="#000000"
                 tools:ignore="NestedWeights,RtlSymmetry" />
 
             <ImageView
@@ -118,7 +120,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="-35dp"
                 android:layout_marginEnd="-8dp"
-                android:src="@drawable/ic_update" />
+                android:src="@drawable/ic_update"
+                android:tint="#000000" />
 
         </LinearLayout>
 
