--- a/Launcher/App/src/main/res/layout/dialog_group_details.xml
+++ b/Launcher/App/src/main/res/layout/dialog_group_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="wrap_content"
@@ -13,31 +14,54 @@
         android:layout_width="440dp"
         android:layout_height="0dp" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <EditText
             android:id="@+id/groupName"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_margin="2dp"
-            android:layout_weight="1"
             android:autofillHints="text"
             android:background="@drawable/bkg_name_group"
             android:inputType="text"
+            android:paddingStart="45dp"
             android:selectAllOnFocus="true"
             android:textColor="@android:color/white"
-            android:textSize="28sp" />
+            android:textSize="28sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/deleteGroupButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
+
+        <ImageView
+            android:id="@+id/starGroupButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="2dp"
+            android:background="@drawable/ic_star_on"
+            android:foregroundGravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/groupName"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/deleteGroupButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_uninstall" />
-    </LinearLayout>
+            android:layout_width="40dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="-6dp"
+            android:foregroundGravity="center"
+            android:src="@drawable/ic_uninstall"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         style="@style/SettingSubtitle"
